# test_conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: osx-build.yml  windows-build.yml
basic_boost/: CMakeLists.txt  README.md
basic_opencv3/: CMakeLists.txt  README.md  conanfile.txt
basic_opencv3/src/: main.cpp  param.h.in
basic_wxwidgets/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
basic_wxwidgets/art/: conan_icon.icns
basic_wxwidgets/cmake_modules/: version.cmake
basic_wxwidgets/src/: bitmap.cpp  bitmap.h  mainapp.cpp  mainapp.h  mainframe.cpp  mainframe.h  resource.rc
src/: main.cpp
test_geos/: CMakeLists.txt  conanfile.py.old  conanfile.txt
test_geos/src/: main.cpp
